--- a/style/style.sass
+++ b/style/style.sass
@@ -8,6 +8,7 @@ $lime: #97D91C
 $white: #ffffff
 $light-yellow: #EFEA5A
 $yellow: #FFCA3A
+$gray-color: #C4C4C4
 
 *
     font-family: 'Roboto', sans-serif
@@ -27,8 +28,19 @@ h1, h2, h3, h4, h5, h6
     color: $text-color
 h1
     font-size: 36px
-
-
+label
+    color: $text-color
+    font-weight: 700
+    text-align: center
+    font-size: 14px
+.status-data-input, .status-data-select
+    border: 1px solid $gray-color
+    border-radius: 5px
+    padding: 5px
+    font-size: 14px
+    text-align: center
+    width: 100%
+    margin: 5px 0 15px 0
 // ---------UNIVERSAL HEADER----------
 header
     display: flex
@@ -37,7 +49,7 @@ header
     align-items: center
     width: 85%
     margin: auto
-    margin-bottom: 30px
+    margin-bottom: 5vw
     height: 25vw
     border-bottom: 1px solid $text-color
 .titles
@@ -58,7 +70,6 @@ nav
     .icon-statistics
         background-image: url("https://gist.githubusercontent.com/SimonettiT/6f56e68bff9f8e278546fee6ba3b02c0/raw/cdc601d499160ef7cfdc73b643e9ec024c098cf8/estadistica.svg")
 
-
 // ---------INDEX PAGE----------------
 .status-outside
     display: grid
@@ -68,6 +79,7 @@ nav
     grid-row-gap: 20px
     width: 85%
     margin: auto
+    height: 35vh
     .status-card
         background-color: $dark-green
         padding: 20px
@@ -92,7 +104,7 @@ nav
     height: 387px
     margin: auto
     text-align: center
-    margin-top: 3px
+    margin-top: 28px
     .title-inside
         padding-top: 70px
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
@@ -130,6 +142,43 @@ nav
             font-size: 22px
             margin-bottom: 5px
 //---------STATISTICS PAGE-----------
-    
-
+.network-status
+    width: 70%
+    margin: auto
+    .location-and-db-status
+        width: 100%
+        display: flex
+        flex-flow: row nowrap
+        justify-content: space-between
+        .location-block
+            width: 70%
+        .db-block
+            width: 25%
+    .energy-status
+        display: flex
+        flex-flow: column nowrap
+        margin: auto
+        margin-top: 30px
+        height: 200px
+        justify-content: space-between
+        text-align: center
+        .energy-status-block
+            display: flex
+            flex-flow: row nowrap
+            justify-content: space-between
+            align-items: center
+            .energy-item
+                display: inline-block
+                width: 45%
+            .cancel-button
+                width: 100%
+        p
+            font-size: 16px
+        input
+            background-color: $lime
+            border: none
+            padding: 10px 20px
+            border-radius: 10px
+            font-weight: 700
+            color: $white
 //---------CONFIG PAGE---------------
