--- a/style/style.css
+++ b/style/style.css
@@ -275,11 +275,20 @@ nav .icon-statistics {
 }
 
 .network-status .energy-status input {
-  background-color: #97D91C;
   border: none;
-  padding: 10px 20px;
-  border-radius: 10px;
+  background-color: #97D91C;
+  padding: 12px 24px;
+  color: #0B032D;
   font-weight: 700;
-  color: #ffffff;
+  border-radius: 6px;
+  border-bottom: 4px solid #80B918;
+  -webkit-transition: all 0.1s ease-in-out;
+  transition: all 0.1s ease-in-out;
+  outline: none;
+}
+
+.network-status .energy-status input:hover {
+  border-bottom-width: 0;
+  margin-top: 3px;
 }
 /*# sourceMappingURL=style.css.map */
