--- a/style/style.sass
+++ b/style/style.sass
@@ -175,10 +175,16 @@ nav
         p
             font-size: 16px
         input
-            background-color: $lime
             border: none
-            padding: 10px 20px
-            border-radius: 10px
+            background-color: $lime;
+            padding: 12px 24px;
+            color: $text-color;
             font-weight: 700
-            color: $white
+            border-radius: 6px;
+            border-bottom: 4px solid $dark-green;
+            transition: all 0.1s ease-in-out;
+            outline: none
+            &:hover
+                border-bottom-width: 0;
+                margin-top: 3px;
 //---------CONFIG PAGE---------------
